--- a/course-map.html
+++ b/course-map.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>הרב זקס – חלון להגות יהודית — Mind‑Map Standalone</title>
+<title>הרב זקס - חלון להגות יהודית - Mind‑Map Standalone</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -117,11 +117,10 @@
         {"label":"ברכת נשיא המדינה"}
       ]},
 
-      {"label":"1 – ביוגרפיה","children":[
+      {"label":"1 - ביוגרפיה","children":[
         {"label":"רקע ביוגרפי והשפעתו על הגות הרב זקס"},
         {"label":"מנהיגות ומורשת הרב זקס"},
-        {"label":"מבוא להגות הרב זקס"},
-        {"label":"מה נלמד?","children":[
+        {"label":"מבוא להגות הרב זקס"},{"label":"מה למדנו?","children":[
           {"label":"חקר ביוגרפי"},
           {"label":"עיצוב תפיסת עולם"},
           {"label":"מודל מנהיגותי"},
@@ -129,21 +128,20 @@
         ]}
       ]},
 
-      {"label":"מודולה 2 – יסודות פילוסופיים","children":[
+      {"label":"2 - יסודות פילוסופיים","children":[
         {"label":"מבוא לפילוסופיה יהודית"},
         {"label":"חקר האחריות והמחשבה היהודית"},
         {"label":"כשלון הנאורות"},
-        {"label":"מסורת בעידן לא מסורתי"},
-        {"label":"מה נלמד?","children":[{"label":"הגדרת הפילוסופיה היהודית, התפתחותה ההיסטורית והאינטלקטואלית, ומיקומו של הרב יונתן זקס בהקשר הפילוסופי־יהודי העכשווי"},{"label":"האחריות כמסגרת אתית: מה מציעה הפילוסופיה היהודית להבנת האחריות בעולם המודרני"},{"label":"בין מסורת למודרניות: איך מנהלים דיאלוג פורה בין המסורת היהודית לבין האתגרים של העידן הפוסט-מסורתי"},{"label":"הביקורת על הנאורות: מהן ההשלכות של כישלון פרויקט הנאורות על חקר המחשבה היהודית ועל רלוונטיות המקורות היהודיים"},{"label":"המחשבה היהודית ככלי פעיל: כיצד הופכת המחשבה היהודית מאוסף ידע היסטורי לכלי עכשווי לפתרון דילמות מודרניות"}]}
+        {"label":"מסורת בעידן לא מסורתי"},{"label":"מה למדנו?","children":[{"label":"הגדרת הפילוסופיה היהודית, התפתחותה ההיסטורית והאינטלקטואלית, ומיקומו של הרב יונתן זקס בהקשר הפילוסופי־יהודי העכשווי"},{"label":"האחריות כמסגרת אתית: מה מציעה הפילוסופיה היהודית להבנת האחריות בעולם המודרני"},{"label":"בין מסורת למודרניות: איך מנהלים דיאלוג פורה בין המסורת היהודית לבין האתגרים של העידן הפוסט-מסורתי"},{"label":"הביקורת על הנאורות: מהן ההשלכות של כישלון פרויקט הנאורות על חקר המחשבה היהודית ועל רלוונטיות המקורות היהודיים"},{"label":"המחשבה היהודית ככלי פעיל: כיצד הופכת המחשבה היהודית מאוסף ידע היסטורי לכלי עכשווי לפתרון דילמות מודרניות"}]}
       ]},
 
-      {"label":"מודולה 3 – המתודה הפרשנית","children":[
+      {"label":"3 - המתודה הפרשנית","children":[
         {"label":"מבוא לפרשנות עפ\"י הרב זקס"},
         {"label":"מרבנות לפילוסופיה"},
         {"label":"פרופ' חנוך בן פזי על אתגרי הפרשנות הטקסטואלית"},
         {"label":"גישה פרשנית לטקסטים קשים"},
         {"label":"חומר קריאה: לא בשם האל"},
-        {"label":"מה נלמד?","children":[
+        {"label":"מה למדנו?","children":[
           {"label":"עקרון הסינתזה הדיסציפלינרית: איך משלבים רבנות ופילוסופיה בפרשנות טקסט"},
           {"label":"עקרון הפרשנות האחראית: כיצד נמנעים מפרשנות לא אתית של טקסטים דתיים"},
           {"label":"עקרון האיזון בין נאמנות לרלוונטיות: איך משמרים אותנטיות תוך יצירת משמעות מודרנית"},
@@ -151,30 +149,30 @@
         ]}
       ]},
 
-      {"label":"מודולה 4 – מטקסט לדיאלוג","gap":22,"children":[
+      {"label":"4 - מטקסט לדיאלוג","gap":22,"children":[
         {"label":"פרופ' יונתן רינהולד על חזונו של הרב זקס: דיאלוג בין אמונה וחברה"},
         {"label":"דיאלוג בין אמונה וחברה"},
         {"label":"השפעת רוזנצוויג על הגות הרב זקס"},
         {"label":"מסורת בעידן לא מסורתי"},
-        {"label":"תורה וחכמה — היהדות והעולם"},
-        {"label":"מה נלמד?","children":[
-          {"label":"דיאלוג בין אמונה לחברה – עקרון יסוד בהגותו של הרב יונתן זקס: דיאלוג בין אמונה דתית לבין החברה הפלורליסטית-מודרנית כמסגרת הכרחית לחיים מוסריים וחברתיים משותפים"},
-          {"label":"שמירת המסורת בעידן מודרני – מודל המאפשר למסורת להמשיך להיות רלוונטית, מחייבת ויצירתית גם בתקופה של חילון ושינוי מתמיד"},
-          {"label":"תורה וחכמה – הפריה הדדית בין התורה כקול זהות יהודית פרטיקולרית לבין החכמה האוניברסלית; סינתזה שבה זהות דתית מובחנת משתלבת בתרומה אוניברסלית"},
-          {"label":"יסודות פילוסופיים – השפעת פרנץ רוזנצוויג ועקרון הדיאלוג וחיי המפגש; הממד הביקורתי כלפי הנאורות כבסיס לחשיבה יהודית מחודשת"}
+        {"label":"תורה וחכמה היהדות והעולם"},
+        {"label":"מה למדנו?","children":[
+          {"label":"דיאלוג בין אמונה לחברה - עקרון יסוד בהגותו של הרב יונתן זקס: דיאלוג בין אמונה דתית לבין החברה הפלורליסטית-מודרנית כמסגרת הכרחית לחיים מוסריים וחברתיים משותפים"},
+          {"label":"שמירת המסורת בעידן מודרני - מודל המאפשר למסורת להמשיך להיות רלוונטית, מחייבת ויצירתית גם בתקופה של חילון ושינוי מתמיד"},
+          {"label":"תורה וחכמה - הפריה הדדית בין התורה כקול זהות יהודית פרטיקולרית לבין החכמה האוניברסלית; סינתזה שבה זהות דתית מובחנת משתלבת בתרומה אוניברסלית"},
+          {"label":"יסודות פילוסופיים - השפעת פרנץ רוזנצוויג ועקרון הדיאלוג וחיי המפגש; הממד הביקורתי כלפי הנאורות כבסיס לחשיבה יהודית מחודשת"}
         ]}
       ]},
 
-      {"label":"מודולה 5 – מדע, מודרניות ומנהיגות","children":[
+      {"label":"5 - מדע, מודרניות ומנהיגות","children":[
         {"label":"מודרניות וחברה"},
         {"label":"מודרניות ומנהיגות בחברה"},
-        {"label":"מאמר — בלשון העתיד"},
+        {"label":"מאמר - בלשון העתיד"},
         {"label":"תפקיד הרב הראשי של אנגליה"},
         {"label":"לורד דוד וולפסון על מורשת והשפעה"},
-        {"label":"מאמר: חלומות ומציאות — שיחה עם עמוס עוז"},
+        {"label":"מאמר: חלומות ומציאות - שיחה עם עמוס עוז"},
         {"label":"מדע ודת"},
-        {"label":"מדע, אמונה וקיימות — פרופ' אריה צבן"},
-        {"label":"מה נלמד?","children":[
+        {"label":"מדע אמונה וקיימות - פרופ' אריה צבן"},
+        {"label":"מה למדנו?","children":[
           {"label":"יישומי הגותו של הרב זקס במדע, חברה ומנהיגות, וזיהוי הקשרים הרעיוניים בין התחומים"},
           {"label":"ההשפעה המעשית של רעיונותיו על מבנים חברתיים, מוסדות ציבור ותהליכי קבלת החלטות"},
           {"label":"כישורי ניתוח וחשיבה ביקורתית: הבחנה בין עקרונות תיאורטיים ליישומים מעשיים בהגותו"},
@@ -182,25 +180,25 @@
         ]}
       ]},
 
-      {"label":"מודולה 6 – מורשת חיה","children":[
+      {"label":"6 - מורשת חיה","children":[
         {"label":"מורשת הרב זקס והשפעותיה"},
-        {"label":"פרופ׳ אדם פרזינגר — כיצד הפך הרב זקס לתופעה תרבותית בישראל?"},
-        {"label":"הרב דניאל אפשטיין — מציטוטים על הקיר למדף הספרים"},
-        {"label":"ד״ר חיים נריה — הצצה לארכיון ולמורשתו של הרב זקס"},
+        {"label":"פרופ׳ אדם פרזינגר - כיצד הפך הרב זקס לתופעה תרבותית בישראל?"},
+        {"label":"הרב דניאל אפשטיין - מציטוטים על הקיר למדף הספרים"},
+        {"label":"ד״ר חיים נריה - הצצה לארכיון ולמורשתו של הרב זקס"},
         {"label":"ג׳ואנה בן הרוש על מורשת הרב זקס"},
-        {"label":"ג׳ואנה גרינווי — חינוך, מנהיגות וזהות יהודית בעידן מודרני"},
+        {"label":"ג׳ואנה גרינווי - חינוך, מנהיגות וזהות יהודית בעידן מודרני"},
         {"label":"מאמר: רדיקלית אז, רדיקלית עכשיו"},
-        {"label":"מה נלמד?","children":[
+        {"label":"מה למדנו?","children":[
           {"label":"תהליך הפיכתו של הרב זקס לדמות תרבותית משפיעה בשיח הציבורי בישראל"},
           {"label":"חדירת רעיונותיו מן היומיומי אל השדה ההגותי והספרותי"},
-          {"label":"תרומת הארכיון – מרחב לשימור, המשכיות והנחלת המורשת"},
+          {"label":"תרומת הארכיון - מרחב לשימור, המשכיות והנחלת המורשת"},
           {"label":"השפעת המורשת על חינוך, זהות ומנהיגות יהודית בעידן מודרני"},
           {"label":"עיון במאמר ‘רדיקלית אז, רדיקלית עכשיו’ כהמשגה של המסורת ככוח להתחדשות"}
         ]}
       ]},
 
-      {"label":"מודולה 7 – סיכום","children":[
-        {"label":"הרב יונתן זקס — חלון לעולם של ערכים, זהות ומנהיגות יהודית"},
+      {"label":"7 - סיכום","children":[
+        {"label":"הרב יונתן זקס - חלון לעולם של ערכים, זהות ומנהיגות יהודית"},
         {"label":"פרויקט מסכם"}
       ]}
     ]
@@ -210,7 +208,7 @@
 
 <script>
 (function(){
-  let data; try{ data = JSON.parse(document.getElementById('mindmap-data').textContent); }catch(e){ console.error('Mindmap JSON parse error:', e); data = {"dir":"rtl","flow":"rtl","root":{"label":"שגיאת נתונים – נא לבדוק JSON","children":[]}}; }
+  let data; try{ data = JSON.parse(document.getElementById('mindmap-data').textContent); }catch(e){ console.error('Mindmap JSON parse error:', e); data = {"dir":"rtl","flow":"rtl","root":{"label":"שגיאת נתונים - נא לבדוק JSON","children":[]}}; }
 
   const DIR = (data.dir||'rtl'); document.documentElement.setAttribute('dir', DIR);
   const FLOW = (data.flow||'rtl');
@@ -373,7 +371,7 @@
     const vpW = viewport.getBoundingClientRect().width;
     const FIT_MARGIN = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--fit-margin')) || 24;
     const baseFit = Math.min(1.0, (vpW - FIT_MARGIN) / Math.max(1, w));
-    const maxDepthNow = nodes.reduce((m,n)=> Math.max(m, n.depth), 0); // <— FIX: לא להכריז שוב maxDepthVis
+    const maxDepthNow = nodes.reduce((m,n)=> Math.max(m, n.depth), 0); // <- FIX: לא להכריז שוב maxDepthVis
     let compactCap = 1.0; if(maxDepthNow<=1) compactCap=0.75; else if(maxDepthNow===2) compactCap=0.88;
     const requiredFit = Math.max(0.2, Math.min(baseFit, compactCap));
 
@@ -438,7 +436,7 @@
       draw(ch);
     }); })(root);
 
-    // DEBUG: בדיקת עוגנים בעומק — כל הקפסולות בעומק מסוים אמורות לשבת על אותו rightPx
+    // DEBUG: בדיקת עוגנים בעומק - כל הקפסולות בעומק מסוים אמורות לשבת על אותו rightPx
     (function debugAnchors(){
       const sNow = Math.max((mode==='fitW') ? lockedFit : userScale, 0.0001);
       const eps = 0.51; // חצי פיקסל + שוליים
