--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
         <!-- רכיב 2.1 · רציונליזם אוניברסלי לברית חברתית -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.3: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 2.3 · חנוך בן פזי</span></div>
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 2.9 · ח2.1 – רציונליזם אוניברסלי לברית חברתית</span></div>
         <div class="desc">דף מונחים של רכיב 2.1 – רציונליזם אוניברסלי לברית חברתית. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
-          <input class="copy-field" dir="ltr" value="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.1.html" readonly>
+          <input class="copy-field" dir="ltr" value="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.9.html" readonly>
           <small>סמני והעתיקי (Ctrl/Cmd+C).</small>
         </details>
         
