--- a/index.html
+++ b/index.html
@@ -296,6 +296,22 @@
       </div>
     </div>
 
+
+        <!-- רכיב 3.7 · טקסטים קשים בתורה -->
+    <div class="vbt-card terms">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.6: חנוך בן פזי, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 3.7 · טקסטים קשים בתורה</span></div>
+        <div class="desc">דף מונחים של רכיב 3.7 – טקסטים קשים בתורה. נפתח בטאב חדש.</div><span class="chev">›</span>
+      </a>
+      <div class="vbt-actions">
+        <details class="copy"><summary>העתקת קישור</summary>
+          <input class="copy-field" dir="ltr" value="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.7.html" readonly>
+          <small>סמני והעתיקי (Ctrl/Cmd+C).</small>
+        </details>
+        
+      </div>
+    </div>
+
     <!-- רכיב 4.3 · ריינהולד  -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: ריינהולד, בטאב חדש">
