--- a/index.html
+++ b/index.html
@@ -387,6 +387,22 @@
       </div>
     </div>
 
+
+        <!-- רכיב 5.1 · דת ומדע -->
+    <div class="vbt-card terms">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: לורד וולפסון, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.1 · דת ומדע</span></div>
+        <div class="desc">דף מונחים של רכיב 5.1 – דת ומדע. נפתח בטאב חדש.</div><span class="chev">›</span>
+      </a>
+      <div class="vbt-actions">
+        <details class="copy"><summary>העתקת קישור</summary>
+          <input class="copy-field" dir="ltr" value="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.1.html" readonly>
+          <small>סמני והעתיקי (Ctrl/Cmd+C).</small>
+        </details>
+        
+      </div>
+    </div>
+
     <!-- רכיב 6.3 · אדם פרזינגר -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: אדם פרזינגר, בטאב חדש">
