--- a/map-151025.html
+++ b/map-151025.html
@@ -102,7 +102,7 @@
   </div>
 </div>
 
-<!-- === DATA (JSON תקין) === -->
+<!-- === DATA (JSON) === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "rtl",
@@ -209,7 +209,7 @@
 
 <script>
 (function(){
-  let data; 
+  let data;
   try{ data = JSON.parse(document.getElementById('mindmap-data').textContent); }
   catch(e){ console.error('Mindmap JSON parse error:', e); data = {"dir":"rtl","flow":"rtl","root":{"label":"שגיאת נתונים - נא לבדוק JSON","children":[]}}; }
 
@@ -249,14 +249,12 @@
     return GAP_Y;
   }
 
-  /* -------- ברירת־מחדל: רק עומק-1 #0 ו-#1 פתוחים -------- */
+  /* רק שני ענפי עומק-1 הראשונים פתוחים; עומק-2+ תמיד סגור בדיפולט */
   const OPEN_D1_OPEN_SET = new Set([0,1]);
 
   function build(raw, depth=0, parent=null, idxInParent=0){
-    let defaultCollapsed;
-    if (depth === 0) defaultCollapsed = false;
-    else if (depth === 1) defaultCollapsed = !OPEN_D1_OPEN_SET.has(idxInParent);
-    else defaultCollapsed = true;
+    // מצב דיפולט שמרני
+    let defaultCollapsed = (depth===0) ? false : (depth===1 ? !OPEN_D1_OPEN_SET.has(idxInParent) : true);
 
     const node = {
       label: raw.label,
@@ -270,7 +268,29 @@
     (raw.children||[]).forEach((ch,i)=> node.children.push(build(ch, depth+1, node, i)));
     return node;
   }
+
   const root = build(data.root, 0, null, 0);
+
+  /* אכיפה מפורשת אחרי הבנייה:
+     - root תמיד פתוח
+     - רק indices 0 ו-1 ב־root.children פתוחים
+     - כל הצאצאים שלהם סגורים */
+  (function enforceDefaultOpen(){
+    if (!root) return;
+    root.collapsed = false;
+    root.children.forEach((c, i)=>{
+      c.collapsed = !OPEN_D1_OPEN_SET.has(i) ? true : false;   // 0,1 פתוח; אחרים סגור
+      // בכל מקרה—כל העומקים שמתחת לעומק-1 סגורים בדיפולט
+      (function closeDeep(n){
+        n.children.forEach(ch=>{
+          ch.collapsed = true;
+          closeDeep(ch);
+        });
+      })(c);
+    });
+    // לפתוח מחדש את שני הראשונים (אחרי שסגרנו צאצאים)
+    root.children.forEach((c,i)=>{ if(OPEN_D1_OPEN_SET.has(i)) c.collapsed=false; });
+  })();
 
   function ensureChip(node){
     if(node.el) return;
@@ -406,16 +426,6 @@
     });
 
     edgeOf.clear(); edgeLayer.textContent='';
-    if(SHOW_GUIDES){
-      DEPTH_ANCHORS.forEach((ax, d)=>{
-        const sNow = Math.max((mode==='fitW') ? lockedFit : userScale, 0.0001);
-        const rx = (Math.round((offsetX + ax) * sNow))/sNow;
-        const g = document.createElementNS('http://www.w3.org/2000/svg','path');
-        g.setAttribute('class','edge'); g.setAttribute('stroke-dasharray','4 6'); g.setAttribute('opacity','0.25');
-        g.setAttribute('d', `M ${rx} 0 L ${rx} ${lastH||1000}`);
-        edgeLayer.appendChild(g);
-      });
-    }
     (function draw(n){ if(n.collapsed) return; n.children.forEach(ch=>{
       const PAD_PARENT=6, PAD_CHILD=0;
       const sNow = Math.max((mode==='fitW') ? lockedFit : userScale, 0.0001);
@@ -471,9 +481,9 @@
     });
     setTimeout(done, dur);
   }
-  function handleToggle(n){ 
-    if(n.collapsed){ if(n.el) n.el.setAttribute('aria-expanded','true'); n.collapsed=false; layout(); } 
-    else { if(n.el) n.el.setAttribute('aria-expanded','false'); animateClose(n, ()=>{ collapseDeep(n); layout(); }); } 
+  function handleToggle(n){
+    if(n.collapsed){ if(n.el) n.el.setAttribute('aria-expanded','true'); n.collapsed=false; layout(); }
+    else { if(n.el) n.el.setAttribute('aria-expanded','false'); animateClose(n, ()=>{ collapseDeep(n); layout(); }); }
   }
 
   const clamp = (v,min,max)=> Math.max(min, Math.min(max, v));
@@ -508,7 +518,7 @@
   document.getElementById('expandAll').addEventListener('click', ()=>{ (function open(n){ n.collapsed=false; n.children.forEach(open); })(root); layout(); });
   document.getElementById('collapseAll').addEventListener('click', ()=>{ (function close(n){ if(n!==root) n.collapsed=true; n.children.forEach(close); })(root); mode='free'; userScale=lockedFit; layout(); });
 
-  function updateSafeTop(){ if(viewport) viewport.style.paddingTop = '0px'; if(scroller) scroller.style.marginTop = '0px'; }
+  updateSafeTop();
   (function sizeViewportInit(){ const rect = viewport.getBoundingClientRect(); const avail = window.innerHeight - rect.top - 16; viewport.style.height = Math.max(320, Math.floor(avail)) + 'px'; })();
   layout();
   window.addEventListener('resize', ()=>{ updateSafeTop(); sizeViewport(); layout(); });
