--- a/map-151025.html
+++ b/map-151025.html
@@ -137,7 +137,7 @@
           { "label": "האחריות כמסגרת אתית: מה מציעה הפילוסופיה היהודית להבנת האחריות בעולם המודרני" },
           { "label": "בין מסורת למודרניות: איך מנהלים דיאלוג פורה בין המסורת היהודית לבין האתגרים של העידן הפוסט-מסורתי" },
           { "label": "הביקורת על הנאורות: מהן ההשלכות של כישלון פרויקט הנאורות על חקר המחשבה היהודית ועל רלוונטיות המקורות היהודיים" },
-          { "label": "המחשבה היהודית ככלי פעיל: כיצד הופכת המחשבה היהודית מאוסף ידע היסטורי לכלי עכשווי לפתרון דילמות מודרניות" }
+          { "label": "המחשבה היהודית ככלי עכשווי לפתרון דילמות מודרניות" }
         ]}
       ]},
       { "label": "3 - המתודה הפרשנית", "children": [
@@ -147,59 +147,59 @@
         { "label": "גישה פרשנית לטקסטים קשים" },
         { "label": "חומר קריאה: לא בשם האל" },
         { "label": "מה למדנו?", "children": [
-          { "label": "עקרון הסינתזה הדיסציפלינרית: איך משלבים רבנות ופילוסופיה בפרשנות טקסט" },
-          { "label": "עקרון הפרשנות האחראית: כיצד נמנעים מפרשנות לא אתית של טקסטים דתיים" },
-          { "label": "עקרון האיזון בין נאמנות לרלוונטיות: איך משמרים אותנטיות תוך יצירת משמעות מודרנית" },
-          { "label": "עקרון הבנייה הבונה מתוך האתגר: כיצד הופכים קושי פרשני לכלי מוסרי" }
+          { "label": "עקרון הסינתזה הדיסציפלינרית" },
+          { "label": "עקרון הפרשנות האחראית" },
+          { "label": "איזון נאמנות–רלוונטיות" },
+          { "label": "בנייה בונה מתוך אתגר" }
         ]}
       ]},
       { "label": "4 - מטקסט לדיאלוג", "gap": 22, "children": [
-        { "label": "פרופ' יונתן רינהולד על חזונו של הרב זקס: דיאלוג בין אמונה וחברה" },
+        { "label": "פרופ' יונתן רינהולד: דיאלוג אמונה–חברה" },
         { "label": "דיאלוג בין אמונה וחברה" },
-        { "label": "השפעת רוזנצוויג על הגות הרב זקס" },
+        { "label": "השפעת רוזנצוויג" },
         { "label": "מסורת בעידן לא מסורתי" },
-        { "label": "תורה וחכמה היהדות והעולם" },
+        { "label": "תורה וחכמה – היהדות והעולם" },
         { "label": "מה למדנו?", "children": [
-          { "label": "דיאלוג בין אמונה לחברה - עקרון יסוד בהגותו של הרב יונתן זקס: דיאלוג בין אמונה דתית לבין החברה הפלורליסטית-מודרנית כמסגרת הכרחית לחיים מוסריים וחברתיים משותפים" },
-          { "label": "שמירת המסורת בעידן מודרני - מודל המאפשר למסורת להמשיך להיות רלוונטית, מחייבת ויצירתית גם בתקופה של חילון ושינוי מתמיד" },
-          { "label": "תורה וחכמה - הפריה הדדית בין התורה כקול זהות יהודית פרטיקולרית לבין החכמה האוניברסלית; סינתזה שבה זהות דתית מובחנת משתלבת בתרומה אוניברסלית" },
-          { "label": "יסודות פילוסופיים - השפעת פרנץ רוזנצוויג ועקרון הדיאלוג וחיי המפגש; הממד הביקורתי כלפי הנאורות כבסיס לחשיבה יהודית מחודשת" }
+          { "label": "דיאלוג אמונה–חברה כמסגרת הכרחית" },
+          { "label": "שמירת מסורת בעידן מודרני" },
+          { "label": "תורה וחכמה – הפריה הדדית" },
+          { "label": "יסודות פילוסופיים – דיאלוג וביקורת הנאורות" }
         ]}
       ]},
       { "label": "5 - מדע, מודרניות ומנהיגות", "children": [
         { "label": "מודרניות וחברה" },
-        { "label": "מודרניות ומנהיגות בחברה" },
+        { "label": "מודרניות ומנהיגות" },
         { "label": "מאמר - בלשון העתיד" },
         { "label": "תפקיד הרב הראשי של אנגליה" },
-        { "label": "לורד דוד וולפסון על מורשת והשפעה" },
-        { "label": "מאמר: חלומות ומציאות - שיחה עם עמוס עוז" },
+        { "label": "לורד דוד וולפסון – מורשת והשפעה" },
+        { "label": "חלומות ומציאות – שיחה עם עמוס עוז" },
         { "label": "מדע ודת" },
-        { "label": "מדע אמונה וקיימות - פרופ' אריה צבן" },
+        { "label": "מדע אמונה וקיימות – פרופ' אריה צבן" },
         { "label": "מה למדנו?", "children": [
-          { "label": "יישומי הגותו של הרב זקס במדע, חברה ומנהיגות, וזיהוי הקשרים הרעיוניים בין התחומים" },
-          { "label": "ההשפעה המעשית של רעיונותיו על מבנים חברתיים, מוסדות ציבור ותהליכי קבלת החלטות" },
-          { "label": "כישורי ניתוח וחשיבה ביקורתית: הבחנה בין עקרונות תיאורטיים ליישומים מעשיים בהגותו" },
-          { "label": "הבנה היסטורית ועכשווית של תרומתו לשיח המדע, הדת והחברה ומיקומו באקוסיסטם האינטלקטואלי" }
+          { "label": "יישומים במדע, חברה ומנהיגות" },
+          { "label": "השפעה על מוסדות ציבור" },
+          { "label": "ניתוח ביקורתי – תיאוריה מול יישום" },
+          { "label": "תרומה לשיח מדע–דת–חברה" }
         ]}
       ]},
       { "label": "6 - מורשת חיה", "children": [
         { "label": "מורשת הרב זקס והשפעותיה" },
-        { "label": "פרופ׳ אדם פרזינגר - כיצד הפך הרב זקס לתופעה תרבותית בישראל?" },
-        { "label": "הרב דניאל אפשטיין - מציטוטים על הקיר למדף הספרים" },
-        { "label": "ד״ר חיים נריה - הצצה לארכיון ולמורשתו של הרב זקס" },
-        { "label": "ג׳ואנה בן הרוש על מורשת הרב זקס" },
-        { "label": "ג׳ואנה גרינווי - חינוך, מנהיגות וזהות יהודית בעידן מודרני" },
+        { "label": "פרופ׳ אדם פרזינגר – תופעה תרבותית" },
+        { "label": "הרב דניאל אפשטיין" },
+        { "label": "ד״ר חיים נריה – הארכיון" },
+        { "label": "ג׳ואנה בן הרוש – מורשת" },
+        { "label": "ג׳ואנה גרינווי – חינוך וזהות" },
         { "label": "מאמר: רדיקלית אז, רדיקלית עכשיו" },
         { "label": "מה למדנו?", "children": [
-          { "label": "תהליך הפיכתו של הרב זקס לדמות תרבותית משפיעה בשיח הציבורי בישראל" },
-          { "label": "חדירת רעיונותיו מן היומיומי אל השדה ההגותי והספרותי" },
-          { "label": "תרומת הארכיון - מרחב לשימור, המשכיות והנחלת המורשת" },
-          { "label": "השפעת המורשת על חינוך, זהות ומנהיגות יהודית בעידן מודרני" },
-          { "label": "עיון במאמר ‘רדיקלית אז, רדיקלית עכשיו’ כהמשגה של המסורת ככוח להתחדשות" }
+          { "label": "הפיכה לדמות ציבורית" },
+          { "label": "חדירת רעיונות לשדה ההגותי" },
+          { "label": "תרומת הארכיון" },
+          { "label": "השפעה על חינוך וזהות" },
+          { "label": "מסורת ככוח להתחדשות" }
         ]}
       ]},
       { "label": "7 - סיכום", "children": [
-        { "label": "הרב יונתן זקס - חלון לעולם של ערכים, זהות ומנהיגות יהודית" },
+        { "label": "חלון לערכים, זהות ומנהיגות" },
         { "label": "פרויקט מסכם" }
       ]}
     ]
@@ -222,6 +222,7 @@
   const edgeLayer = document.getElementById('edges');
 
   let mode='fitW', userScale=1, lockedFit=1, pinchStartDist=0, pinchStartScale=1;
+  let didInitialCenter=false;  // נשתמש כדי לבצע גלילה התחלתית פעם אחת
 
   if(FLOW==='ltr'){ stage.style.transformOrigin='top left'; stage.style.left='0'; stage.style.right=''; }
   else { stage.style.transformOrigin='top right'; stage.style.right='0'; stage.style.left=''; }
@@ -249,12 +250,14 @@
     return GAP_Y;
   }
 
-  /* רק שני ענפי עומק-1 הראשונים פתוחים; עומק-2+ תמיד סגור בדיפולט */
-  const OPEN_D1_OPEN_SET = new Set([0,1]);
+  /* === דיפולט: פתוח רק ענף 0 בעומק-1; שאר עומקים סגורים === */
+  const OPEN_D1_INDEX = 0;
 
   function build(raw, depth=0, parent=null, idxInParent=0){
-    // מצב דיפולט שמרני
-    let defaultCollapsed = (depth===0) ? false : (depth===1 ? !OPEN_D1_OPEN_SET.has(idxInParent) : true);
+    let defaultCollapsed;
+    if (depth===0) defaultCollapsed = false;         // root תמיד פתוח
+    else if (depth===1) defaultCollapsed = (idxInParent!==OPEN_D1_INDEX); // רק הראשון פתוח
+    else defaultCollapsed = true;                    // כל העומקים מתחת ל-1 סגורים
 
     const node = {
       label: raw.label,
@@ -271,16 +274,12 @@
 
   const root = build(data.root, 0, null, 0);
 
-  /* אכיפה מפורשת אחרי הבנייה:
-     - root תמיד פתוח
-     - רק indices 0 ו-1 ב־root.children פתוחים
-     - כל הצאצאים שלהם סגורים */
+  /* כפיית כלל הדיפולט גם אם ב-JSON ציינו אחרת */
   (function enforceDefaultOpen(){
-    if (!root) return;
     root.collapsed = false;
-    root.children.forEach((c, i)=>{
-      c.collapsed = !OPEN_D1_OPEN_SET.has(i) ? true : false;   // 0,1 פתוח; אחרים סגור
-      // בכל מקרה—כל העומקים שמתחת לעומק-1 סגורים בדיפולט
+    root.children.forEach((c,i)=>{
+      c.collapsed = (i!==OPEN_D1_INDEX);
+      // כל הצאצאים תמיד סגורים בדיפולט
       (function closeDeep(n){
         n.children.forEach(ch=>{
           ch.collapsed = true;
@@ -288,8 +287,6 @@
         });
       })(c);
     });
-    // לפתוח מחדש את שני הראשונים (אחרי שסגרנו צאצאים)
-    root.children.forEach((c,i)=>{ if(OPEN_D1_OPEN_SET.has(i)) c.collapsed=false; });
   })();
 
   function ensureChip(node){
@@ -329,6 +326,7 @@
       subHeight(c);
       total += c._subH;
       if(i>0){ total += (node.gapOverride != null) ? node.gapOverride : gapForDepth(c.depth); }
+      if(node.depth===0 && i < node.children.length-1){ total += GAP_BETWEEN_MODS_D2; } /* ריווח נוסף בין מודולים */
     });
     node._subH = Math.max(node.height, total); return node._subH;
   }
@@ -338,7 +336,7 @@
 
   function position(node, depth, top){
     node.x = xForDepth(depth);
-    node.y = top + node._subH/2;
+    node.y = top + node._subH/2;              /* תמיד מרכז אנכי של העמודה */
     if(!(node.collapsed) && node.children.length){
       let cursor = top;
       node.children.forEach((c,idx)=>{
@@ -360,7 +358,7 @@
       minY = Math.min(minY, n.y - n.height/2);
       maxY = Math.max(maxY, n.y + n.height/2);
     });
-    return { w:(maxX-minX), h:(maxY-minY), minX };
+    return { w:(maxX-minX), h:(maxY-minY), minX, minY, maxY };
   }
 
   const SHOW_GUIDES = false;
@@ -368,13 +366,21 @@
   const edgeOf = new Map();
 
   function layout(){
+    /* 1) מדידה */
     measure(root);
-    subHeight(root); position(root,0,0);
 
+    /* 2) חישוב סאב-הייט ומיקום מוקדם סביב 0 כדי שנוכל לקבע עיגון אנכי אמיתי */
+    subHeight(root);
+
+    /* ——— טריק: מציבים את השורש סביב y=0 (top = -root._subH/2), כך שביחס לעומק-1 הוא במרכז מוחלט ——— */
+    position(root, 0, -root._subH/2);
+
+    /* 3) איסוף נראים ורוחב מקס' לעוגני עומק */
     let nodesTmp=[]; collectVisible(root, nodesTmp);
     const depthMaxW = new Map();
     nodesTmp.forEach(n=>{ depthMaxW.set(n.depth, Math.max(depthMaxW.get(n.depth)||0, n.width||140)); });
 
+    /* 4) עוגני X */
     DEPTH_ANCHORS = new Map(); DEPTH_ANCHORS.set(0, 0);
     let acc=0; const maxDepthVis = nodesTmp.reduce((m,n)=>Math.max(m,n.depth),0);
     for(let d=1; d<=maxDepthVis+1; d++){
@@ -383,11 +389,15 @@
       DEPTH_ANCHORS.set(d, (FLOW==='rtl' ? -acc : acc));
     }
 
-    subHeight(root); position(root, 0, 0);
+    /* 5) מיקום סופי עם אותו עיגון אנכי */
+    subHeight(root);
+    position(root, 0, -root._subH/2);
 
+    /* 6) גבולות */
     const nodes=[]; collectVisible(root, nodes);
-    const { w, h, minX } = computeBounds(nodes);
+    const { w, h, minX, minY, maxY } = computeBounds(nodes);
 
+    /* 7) Fit לרוחב */
     const vpW = viewport.getBoundingClientRect().width;
     const FIT_MARGIN = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--fit-margin')) || 24;
     const baseFit = Math.min(1.0, (vpW - FIT_MARGIN) / Math.max(1, w));
@@ -411,6 +421,7 @@
     stage.style.width  = Math.ceil(stageW) + 'px';
     stage.style.height = Math.ceil(h) + 'px';
 
+    /* 8) מיקום קפסולות */
     const sPlace = (mode==='fitW') ? lockedFit : userScale;
     nodes.forEach(n=>{
       const top = n.y - n.height/2;
@@ -425,6 +436,7 @@
       if(n.children.length){ n.el.setAttribute('aria-expanded', String(!n.collapsed)); }
     });
 
+    /* 9) קווים */
     edgeOf.clear(); edgeLayer.textContent='';
     (function draw(n){ if(n.collapsed) return; n.children.forEach(ch=>{
       const PAD_PARENT=6, PAD_CHILD=0;
@@ -433,8 +445,8 @@
       const childAnchor  = (Math.round((offsetX + ch.x) * sNow)) / sNow;
       const p1x = (FLOW==='rtl') ? (parentAnchor - PAD_PARENT) : (parentAnchor + n.width - PAD_PARENT);
       const p2x = (FLOW==='rtl') ? (childAnchor  - PAD_CHILD)  : (childAnchor  + PAD_CHILD);
-      const p1y = n.y, p2y = ch.y;
       const path = document.createElementNS('http://www.w3.org/2000/svg','path');
+      const p1y = n.y, p2y = ch.y;
       const dx=Math.abs(p2x-p1x)*.45, c1x=(FLOW==='rtl'? p1x-dx: p1x+dx), c2x=(FLOW==='rtl'? p2x+dx: p2x-dx);
       path.setAttribute('class','edge');
       path.setAttribute('d', `M ${p1x} ${p1y} C ${c1x} ${p1y}, ${c2x} ${p2y}, ${p2x} ${p2y}`);
@@ -443,6 +455,15 @@
     }); })(root);
 
     applyZoom();
+
+    /* 10) גלילה התחלתית – ממקמים את השורש במרכז גובה ה־viewport (כמו בתמונה) */
+    if(!didInitialCenter){
+      const s = (mode==='fitW') ? lockedFit : userScale;
+      const rootYpx = (root.y - minY) * s;
+      viewport.scrollTop = Math.max(0, Math.round(rootYpx - viewport.clientHeight/2));
+      didInitialCenter = true;
+    }
+
     stage.style.opacity='1';
   }
 
@@ -460,16 +481,16 @@
     let needY = (scroller.offsetHeight - viewport.clientHeight) > tol;
     if(mode==='fitW'){
       needX = false;
+      // לא מכריחים ביטול גלילה אנכית – נותנים אפשרות לגלול כדי למרכז שורש
+      // אם כל הגובה קטן מהמסך – נסגור
       if(lastH && (lastH * Math.max(lockedFit, 0.0001) <= viewport.clientHeight - tol)) needY = false;
     }
     viewport.style.overflowX = needX ? 'auto' : 'hidden';
-    viewport.style.overflowY = needY ? 'auto' : 'hidden';
+    viewport.style.overflowY = needY ? 'auto' : 'auto';  // השארת גלילה אנכית זמינה
     viewport.style.cursor    = (needX || needY) ? 'grab' : 'auto';
   }
 
-  function updateSafeTop(){ if(viewport) viewport.style.paddingTop = '0px'; if(scroller) scroller.style.marginTop = '0px'; }
-  function sizeViewport(){ const rect = viewport.getBoundingClientRect(); const avail = window.innerHeight - rect.top - 16; viewport.style.height = Math.max(320, Math.floor(avail)) + 'px'; }
-
+  /* Toggle */
   function collapseDeep(n){ n.collapsed = true; n.children.forEach(c=>collapseDeep(c)); }
   function animateClose(node, done){
     const list=[]; function collectDesc(n){ if(!n || n.collapsed) return; list.push(n); n.children.forEach(collectDesc); }
@@ -486,6 +507,7 @@
     else { if(n.el) n.el.setAttribute('aria-expanded','false'); animateClose(n, ()=>{ collapseDeep(n); layout(); }); }
   }
 
+  /* זום/פאן */
   const clamp = (v,min,max)=> Math.max(min, Math.min(max, v));
   const currentScale = ()=> (mode==='fitW' ? lockedFit : userScale);
   document.getElementById('zoomIn').addEventListener('click', ()=>{ const base = (mode==='fitW') ? lockedFit : userScale; mode='free'; userScale = clamp(base + 0.10, 0.2, 3); applyZoom(); });
@@ -518,10 +540,15 @@
   document.getElementById('expandAll').addEventListener('click', ()=>{ (function open(n){ n.collapsed=false; n.children.forEach(open); })(root); layout(); });
   document.getElementById('collapseAll').addEventListener('click', ()=>{ (function close(n){ if(n!==root) n.collapsed=true; n.children.forEach(close); })(root); mode='free'; userScale=lockedFit; layout(); });
 
-  updateSafeTop();
-  (function sizeViewportInit(){ const rect = viewport.getBoundingClientRect(); const avail = window.innerHeight - rect.top - 16; viewport.style.height = Math.max(320, Math.floor(avail)) + 'px'; })();
+  /* init */
+  (function sizeViewportInit(){
+    const rect = viewport.getBoundingClientRect();
+    const avail = window.innerHeight - rect.top - 16;
+    viewport.style.height = Math.max(320, Math.floor(avail)) + 'px';
+  })();
+
   layout();
-  window.addEventListener('resize', ()=>{ updateSafeTop(); sizeViewport(); layout(); });
+  window.addEventListener('resize', ()=>{ const rect = viewport.getBoundingClientRect(); const avail = window.innerHeight - rect.top - 16; viewport.style.height = Math.max(320, Math.floor(avail)) + 'px'; layout(); });
 
   if (document.fonts && document.fonts.ready) {
     document.fonts.ready.then(()=>{ layout(); });
